solve the overflow problem

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -114,6 +114,8 @@ body {
 
 #exp2 {
 
+  overflow: hidden;
+
   background-image: url('../images/sky_nasa.jpg');
   background-size: 100%;
 
